# pastel-lang

./: CMakeLists.txt  README.md
include/codegen/: compiler.h
include/lexer/: lexer.h  token.h
include/parser/: ast.h  parser.h
src/: main.c
src/codegen/: casting.c  casting.h  compiler.c  compiler.h  types.h  utils.c  utils.h
src/codegen/expr/: binop.c  binop.h  call.c  call.h  expr.c  expr.h  if.c  if.h  value.c  value.h
src/codegen/stmt/: function.c  function.h  loop.c  loop.h  stmt.c  stmt.h  value.c  value.h
src/lexer/: lexer.c  lexer.h  token.c  token.h
src/parser/: ast.c  ast.h  parser.c  parser.h
src/util/: ptr_list.c  ptr_list.h  util.h
test/: test.pstl
